--- a/_includes/section-blog.html
+++ b/_includes/section-blog.html
@@ -10,10 +10,10 @@
           </div> -->
           <div class="section__head">
             <span class="section-head">
-              <h2 class="section__title" style="font-family: Georgia, 'Times New Roman', Times, serif">Inconexo</h2>
+              <h2 class="section__title">La Softwarería</h2>
               <a class="section__link" href="{{ '/blog' | relative_url }}">View all posts</a>
             </span>
-            <p class="section__subtitle">Un blog sobre las movidas que me molan (en español)</p>
+            <p class="section__subtitle">Un blog sobre diseño, desarrollo y recetas de cocina</p>
           </div>
         </div>
       </div>
