--- a/_includes/footer-blog.html
+++ b/_includes/footer-blog.html
@@ -5,6 +5,8 @@
     <div class="row">
       <div class="col col-12">
 
+        {% include section-subscribe.html %}
+
         <div class="footer__inner">
           {% if site.data.settings.social %}
             <div class="social">
