--- a/_includes/header-blog.html
+++ b/_includes/header-blog.html
@@ -4,11 +4,11 @@
     <div class="row">
       <div class="header__inner col col-12">
         <div class="logo">
-          <a class="logo__link" href="{{ site.baseurl }}/" style="font-family: Georgia, 'Times New Roman', Times, serif">
+          <a class="logo__link" href="{{ site.baseurl }}/blog" style="font-family: Georgia, 'Times New Roman', Times, serif">
           {% if site.data.settings.logo %}
             <img class="logo__image" src="{{ site.baseurl }}{{ site.data.settings.logo }}" alt="{{ site.data.settings.title }}">
           {% else %}
-            Inconexo
+            La Softwarería
           {% endif %}
           </a>
         </div>
