--- a/_includes/section-hero-blog.html
+++ b/_includes/section-hero-blog.html
@@ -1,28 +1,18 @@
 <!-- begin hero -->
-<section class="hero hero-blog">
+<section class="hero">
   <div class="container">
     <div class="row">
-      <div class="col col-8 col-d-12 align-self-center">
-        <div class="hero__inner">
-          <h1 class="hero__title" style="font-family: Georgia, 'Times New Roman', Times, serif">El blog sobre diseño, urbanismo, death metal y lo que surja.</h1>
-          <p class="hero__description">La semana pasada descubrí que nadie ha podido medir la velocidad de la luz, y hoy estoy leyendo sobre calcetines para perros. Soy <a href="https://ivoriginal.github.io/about">Ivo</a> y escribo lo que me da la gana.</p>
+      <div class="col col-7 col-m-12 col-d-7 align-self-center flex-column">
+        <div class="hero__inner flex-column mb-lg-2">
+          <h1 class="home__title mb-lg-1">{{ site.data.settings.blog.hero__title }}</h1>
+          <p class="hero__description">{{ site.data.settings.blog.hero__description }}</p>
         </div>
       </div>
-      <div class="col col-4 col-t-6 col-m-8 avatar">
-        <img src="/images/blog-art.png" />
-      </div>
-      <div>
-        <section class="">
-          <div class="subscribe__inner">
-            <form class="subscribe__form validate" action="{% if site.data.settings.mailchimp.mailchimp__identifier %}//{{site.data.settings.mailchimp.mailchimp__identifier}}{% else %}#{% endif %}" method="POST" id="membedded-subscribe-form" name="membedded-subscribe-form" target="_blank" novalidate>
-              <label class="screen-reader-text" for="mce-EMAIL">Email address</label>
-              <input class="subscribe__email required email" id="mce-EMAIL" type="text" name="EMAIL" placeholder="Email address">
-              <button class="button button--primary subscribe__button" id="membedded-subscribe" type="submit" name="subscribe">{{ site.data.settings.mailchimp.mailchimp__button__text }}</button>
-            </form>
-          </div>
-        </section>
+      <div class="col col-5 col-t-6 col-m-8 avatar">
+        <img src="/images/blog-art.PNG" />
       </div>
     </div>
+    <hr>
   </div>
 </section>
 <!-- end hero -->
