--- a/_layouts/blog-back.html
+++ b/_layouts/blog-back.html
@@ -9,7 +9,7 @@
     {% include google-analytics.html %}
   {% endif %}
 
-  {% include header-blog.html %}
+  {% include header-blog-back.html %}
 
   <!-- begin content -->
   <main class="content" aria-label="Content">
@@ -19,7 +19,7 @@
 
   <div class="top" title="Top"><i class="ion ion-ios-arrow-round-up"></i></div>
 
-  {% include footer-blog.html %}
+  {% include footer.html %}
 
   <script src="{{ site.baseurl }}/js/scripts.js"></script>
   <script src="{{ site.baseurl }}/js/common.js"></script>
