--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: blog
 ---
 
 <div class="container">
@@ -45,7 +45,7 @@ layout: default
       {{ content }}
     </div>
 
-    <div class="post__share">
+    <!-- <div class="post__share">
       <ul class="share__list list-reset">
         <li class="share__item">
           <a class="share__link share__twitter"
@@ -68,14 +68,10 @@ layout: default
           onclick="window.open(this.href, 'pop-up', 'left=20,top=20,width=500,height=500,toolbar=1,resizable=0'); return false;" title="Share on LinkedIn" rel="nofollow"><i class="ion ion-logo-linkedin"></i></a>
         </li>
       </ul>
-    </div>
-
-    {% if site.data.settings.disqus-identifier %} {% include disqus-comments.html %} {% endif %}
+    </div> -->
 
   </article>
 </div>
 <!-- end post -->
 
 {% include section-related-posts.html %}
-
-{% include section-subscribe.html %}
