--- a/_sass/3-modules/_article.scss
+++ b/_sass/3-modules/_article.scss
@@ -42,8 +42,6 @@
 
 }
 
-
-
 .article__head {
   position: relative;
 }
@@ -55,7 +53,7 @@
   line-height: 1;
   font-weight: 500;
   border-radius: 8px;
-  color: var(--heading-font-color);
+  color: black;
   // background: var(--background-alt-color);
   pointer-events: none;
 }
@@ -90,6 +88,7 @@
   a {
     text-decoration: underline;
     text-decoration-color: transparent;
+    color: inherit;
 
     &:hover {
       color: var(--heading-font-color);
