--- a/_includes/header-blog-back.html
+++ b/_includes/header-blog-back.html
@@ -13,7 +13,7 @@
           {% if site.data.settings.logo %}
             <img class="logo__image" src="{{ site.baseurl }}{{ site.data.settings.logo }}" alt="{{ site.data.settings.title }}">
           {% else %}
-            Inconexo
+            La Softwarería
           {% endif %}
           </a>
         </div>
