--- a/_layouts/blog-back.html
+++ b/_layouts/blog-back.html
@@ -19,7 +19,7 @@
 
   <div class="top" title="Top"><i class="ion ion-ios-arrow-round-up"></i></div>
 
-  {% include footer.html %}
+  {% include footer-blog.html %}
 
   <script src="{{ site.baseurl }}/js/scripts.js"></script>
   <script src="{{ site.baseurl }}/js/common.js"></script>
