--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -9,9 +9,9 @@
 
         <div class="banner__head">
           <h2 class="banner__title">Let's do cool stuff together</h2>
-          <p class="banner__subtitle">Schedule a 30 min call in <a href="https://calendly.com/ivoriginal">my Calendly</a> to discuss your project</p>
+          <p class="banner__subtitle">Schedule a 30 min call in <a href="https://calendly.com/CommitSans">our Calendly</a> to discuss your project.</p>
         </div>
-        <a href="https://calendly.com/ivoriginal" target="_blank" class="button button--primary" name="subscribe">Go to Calendly</a>
+        <a href="https://calendly.com/CommitSans" target="_blank" class="button button--primary" name="subscribe">Go to Calendly</a>
       </section>
     </div>
   </div>
