--- a/_sass/3-modules/_header.scss
+++ b/_sass/3-modules/_header.scss
@@ -75,7 +75,7 @@
   // padding: 4px 0;
   font-family: $heading-font-family;
   // font-size: 36px;
-  font-size: $heading-font-size * 1.250;
+  // font-size: $heading-font-size * 1.250;
   letter-spacing: -1px;
   // line-height: 1;
   font-weight: 700;
