--- a/_includes/article.html
+++ b/_includes/article.html
@@ -1,5 +1,5 @@
 <div class="article col">
-  <div class="article__inner">
+  <!-- <div class="article__inner"> -->
 
     <div class="article__head">
       <time class="article__date" datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | date_to_string }}</time>
@@ -19,5 +19,5 @@
       <p class="article__excerpt">{% if post.description %}{{ post.description }}{% else %}{{ post.content | strip_html | truncate: 80 }}{% endif %}</p>
 
     </div>
-  </div>
+  <!-- </div> -->
 </div>
