--- a/_includes/article.html
+++ b/_includes/article.html
@@ -1,5 +1,5 @@
 <div class="article col">
-  <!-- <div class="article__inner"> -->
+  <div class="article__inner article__inner__transparent">
 
     <div class="article__head">
       <time class="article__date" datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | date_to_string }}</time>
@@ -12,12 +12,12 @@
 
     <div class="article__content">
 
-      <h2 class="article__title">
+      <h2 class="article__title article__title__white">
         <a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
       </h2>
 
       <p class="article__excerpt">{% if post.description %}{{ post.description }}{% else %}{{ post.content | strip_html | truncate: 80 }}{% endif %}</p>
 
     </div>
-  <!-- </div> -->
+  </div>
 </div>
