--- a/_includes/section-hero.html
+++ b/_includes/section-hero.html
@@ -12,9 +12,9 @@
           <a href="mailto:ivo@commitsans.com" class="button button--outline subscribe__button" id="membedded-subscribe" name="subscribe">Join the network</a>
         </div>
       </div>
-      <!-- <div class="col col-5 col-t-6 col-m-8 avatar">
-        <img src="/images/about/01.jpg" />
-      </div> -->
+      <div class="col col-6 col-t-6 col-m-8 avatar flex justify-content-center">
+        <img src="/images/team.png" />
+      </div>
     </div>
     <hr>
   </div>
