--- a/_sass/2-base/_base.scss
+++ b/_sass/2-base/_base.scss
@@ -268,6 +268,10 @@ table td {
   align-self: center;
 }
 
+.justify-content-center {
+  justify-content: center;
+}
+
 .margin-top {
   padding-top: 72px;
 }
