--- a/_sass/3-modules/_section-hero.scss
+++ b/_sass/3-modules/_section-hero.scss
@@ -171,6 +171,11 @@
 
 // 
 .hero .avatar {
+
+  img {
+    max-width: 400px;
+  }
+
   // 
   @media only screen and (max-width: $desktop) {
     align-self: center;
